--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <option value="" disabled selected>Select the Level</option>
                 <option value="easy">Easy</option>
                 <option value="medium">Medium</option>                                                                                         
-                <option value="Hard">Hard</option>
+                <option value="hard">Hard</option>
             </select>
             <button id="play"><img src="./assets/play.svg" alt=""></button>  
         </div> 
