--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
                     <div class="hr" ></div>
                     <div id="ques-details">
-                        <p><span id="curr-no">1&nbsp;</span>of <span id="total-no"> 10 </span>Questions</p>
+                        <p><span id="curr-no">1</span>&nbsp;of <span id="total-no"> 10 </span>Questions</p>
                         <button id="next-btn">Next Ques</button>
                     </div>
                 </div>
